@@ -3,6 +3,7 @@ New in master
 
 Features
 --------
+
 * Add ``META_GENERATOR_TAG`` option in conf.py allowing the meta generator
   to be disabled if needed. (Issue #2628)
 * Add ``YUI_COMPRESSOR_EXECUTABLE``, ``CLOSURE_COMPILER_EXECUTABLE``,
@@ -12,6 +13,8 @@ Features
 
 Bugfixes
 --------
+
+* Fix crash if ``PAGE_INDEX`` is enabled (Issue #2646)
 
 New in v7.8.3
 =============
